<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/customer_support" />

    <EditText
        android:id="@+id/editTextMenuId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/input_menu_hint"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/textViewHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="0dp"
        android:text="@string/menu_id_from_the_queue_menu_settings"
        android:textColor="#99000000"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/editTextMenuId" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/textViewHint">

        <Button
            android:id="@+id/buttonContactSupport"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_button_selector"
            android:text="@string/contact_customer_support"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/primaryColor"
            android:indeterminateTintMode="src_in"
            android:visibility="gone" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
